Fix user register flow
